--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,20 @@ body {
   height: 45px;
 }
 
+#uoe_img {
+  position: absolute;
+  top: 0px;
+  right: 5px;
+  height: 45px;
+}
+
+#and_img {
+  position: absolute;
+  top: 0px;
+  right: 55px;
+  height: 45px;
+}
+
 h1 {
   margin: auto;
 }
