--- a/css/style.css
+++ b/css/style.css
@@ -17,27 +17,28 @@ body {
 
 #peace_img {
   position: absolute;
-  top: 0px;
+  top: 5px;
   left: 0px;
-  height: 45px;
+  height: 35px;
 }
 
 #uoe_img {
   position: absolute;
-  top: 0px;
-  right: 5px;
-  height: 45px;
+  top: 5px;
+  right: 8px;
+  height: 35px;
 }
 
 #and_img {
   position: absolute;
-  top: 0px;
-  right: 55px;
-  height: 45px;
+  top: 7px;
+  right: 160px;
+  height: 35px;
 }
 
 h1 {
   margin: auto;
+  font-size: 28px;
 }
 
 #story {
