--- a/css/style.css
+++ b/css/style.css
@@ -62,15 +62,46 @@ h1 {
   display: inline-block;
   position: absolute;
   margin-right: 3px;
-  margin-top: 10px;
+  margin-top: 20px;
+}
+
+.dot1 {
+  height: 18px;
+  width: 18px;
+  background-color: white;
+  border-radius: 50%;
+  display: inline-block;
+  position: absolute;
+  margin-right: 3px;
+  margin-top: 20px;
+}
+
+.dot2 {
+  height: 18px;
+  width: 18px;
+  background-color: #7B8AD6;
+  display: inline-block;
+  position: absolute;
+  margin-right: 3px;
+  margin-top: 15px;
+}
+
+.dot3 {
+  height: 18px;
+  width: 18px;
+  background-color: white;
+  display: inline-block;
+  position: absolute;
+  margin-right: 3px;
+  margin-top: 15px;
 }
 
 #leg_p{
   margin: auto;
-  border-radius: 10px;
   background-color: rgba(0, 0, 0, 0);
   padding-left: 30px;
-  font-size: 14px;
+  font-size: 12px;
+  line-height: 15px;
 }
 
 body::-webkit-scrollbar {
@@ -147,7 +178,8 @@ p {
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.7);
   padding: 10px;
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 20px;
   box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323;
 }
 
