--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ p {
   padding: 10px;
   font-size: 16px;
   line-height: 20px;
-  box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323;
+  /* box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323; */
 }
 
 .graphic__vis {
@@ -291,15 +291,12 @@ p {
   stroke-opacity: 1;
 }
 
-.myXaxis line {
-  opacity: 1;
-}
-
-.multi_axis path {
+.bee_x_axis line {
   opacity: 0;
 }
 
-.multi_y path {
+.multiline_x_axis path,
+.multiline_y_axis path {
   opacity: 0;
 }
 
