--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,28 @@ h1 {
   font-size: 12px;
 }
 
+.rec {
+  height: 20px;
+  width: 20px;
+  background-color: #7B8AD6;
+  /* border-radius: 50%; */
+  display: inline-block;
+  position: absolute;
+  margin-right: 3px;
+  margin-top: 8px;
+}
+
+.rec1 {
+  height: 4px;
+  width: 20px;
+  background-color: white;
+  /* border-radius: 50%; */
+  display: inline-block;
+  position: absolute;
+  margin-right: 3px;
+  margin-top: 15px;
+}
+
 .dot {
   height: 18px;
   width: 18px;
