--- a/css/style.css
+++ b/css/style.css
@@ -205,6 +205,10 @@ p {
   /* box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323; */
 }
 
+h5 {
+font-weight: normal;
+}
+
 .graphic__vis {
   position: absolute;
   top: 0px;
@@ -298,7 +302,7 @@ p {
 #publications {
   position: relative;
   transition: transform .2s;
-  height: 250px;
+  height: 300px;
   /* Animation */
   -webkit-box-shadow: 0 0 8px 1px #868686;
   -moz-box-shadow: 0 0 8px 1px #868686;
@@ -388,7 +392,7 @@ p {
   display: none;
   position: absolute;
   background-color: #0F1826;
-  min-width: 160px;
+  min-width: 120px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
@@ -424,4 +428,23 @@ p {
 
 a {
   color: yellowgreen;
+}
+
+#myBtn {
+  position: absolute;
+  bottom: 20px;
+  left: 30px;
+  z-index: 100;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #313461;
+  color: white;
+  cursor: pointer;
+  padding: 5px 15px;
+  border-radius: 2px;
+}
+
+#myBtn:hover {
+  background-color: #04AA6D;
 }
