--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,24 @@
+html {
+  overflow: scroll;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
 body {
   color: white;
   font-family: 'Montserrat';
   background-color: black;
-  overflow: hidden;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 #remove-screen-btn {
@@ -14,12 +30,17 @@ body {
   border-radius: 2px;
   font-family: "Montserrat";
   color: black;
-  padding: 0.6em 2em;
+  padding: 7px 16px;
   cursor: pointer;
   background: #FDD92F;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
-  font-weight: bold;
-  font-size: 16px;
+  font-size: 14px;
+}
+
+#remove-screen-btn:hover {
+  transition: color 0.3s;
+  color: white;
+  /* transition: background-color 0.3s; */
+  background-color: #AA4197;
 }
 
 #initial_screen {
@@ -33,14 +54,15 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Ensure it is above other elements */
+  z-index: 9999;
+  /* Ensure it is above other elements */
   visibility: visible;
 }
 
-
 #header {
   position: fixed;
-  background-color: #0F1826;
+  /* background-color: #0F1826; */
+  background-color: black;
   height: 45px;
   top: 0px;
   left: 0px;
@@ -48,6 +70,14 @@ body {
   width: 100%;
   z-index: 999;
   visibility: hidden;
+}
+
+#indicator {
+  width: 20px;
+  position: fixed;
+  top: 80px;
+  z-index: 9999;
+  /* background-color: gray; */
 }
 
 #story {
@@ -61,21 +91,65 @@ body {
   position: absolute;
   top: 5px;
   left: 0px;
-  height: 35px;
+  height: 40px;
 }
 
 #uoe_img {
   position: absolute;
-  top: 5px;
-  right: 8px;
-  height: 35px;
+  top: 50px;
+  right: 5px;
+  height: 40px;
+  z-index: 999;
 }
 
 #and_img {
   position: absolute;
   top: 7px;
-  right: 160px;
-  height: 35px;
+  right: 5px;
+  height: 40px;
+  z-index: 999;
+}
+
+#chart_icon,
+#area_icon,
+#pie_icon,
+#globe_icon,
+#bee_icon {
+  opacity: 0.6;
+  position: absolute;
+  height: 20px;
+  z-index: 999;
+  left: 18px;
+  cursor: pointer;
+}
+
+
+#bee_icon:hover {
+  opacity: 1;
+}
+
+.active {
+  opacity: 1 !important;
+}
+
+#globe_icon:hover {
+  opacity: 1;
+  transition: 0.2s;
+}
+
+#area_icon:hover {
+  opacity: 1;
+  transition: 0.2s;
+}
+
+#pie_icon:hover {
+  opacity: 1;
+  transition: 0.2s;
+}
+
+#chart_icon:hover {
+  opacity: 1;
+  transition: 0.2s;
 }
 
 h1 {
@@ -155,7 +229,7 @@ h1 {
   margin-top: 15px;
 }
 
-#leg_p{
+#leg_p {
   margin: auto;
   background-color: rgba(0, 0, 0, 0);
   padding-left: 30px;
@@ -163,21 +237,6 @@ h1 {
   line-height: 15px;
 }
 
-body::-webkit-scrollbar {
-  width: 10px;
-}
-
-body::-webkit-scrollbar-track {
-  background: black;
-}
-
-body::-webkit-scrollbar-thumb {
-  background: #ffffff;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-  background: #a90000;
-}
 
 #separator {
   position: relative;
@@ -187,19 +246,17 @@ body::-webkit-scrollbar-thumb:hover {
   background-attachment: fixed;
   background-size: contain;
   background-position: center;
-  background-color: black;
 }
 
 #separator05,
 #separator1 {
   position: relative;
   display: flex;
-  /* background-image: url("../img/ru.PNG"); */
+  padding-left: 20px;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: contain;
   background-position: center;
-  background-color: black;
 }
 
 .graphic,
@@ -216,6 +273,7 @@ body::-webkit-scrollbar-thumb:hover {
 .graphic__prose__06,
 .graphic__prose__075,
 .graphic__prose__1 {
+  pointer-events: none;
   position: relative;
   font-size: 16px;
   z-index: 99;
@@ -234,16 +292,22 @@ body::-webkit-scrollbar-thumb:hover {
 p {
   position: relative;
   margin: auto;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.7);
-  padding: 10px;
+  border-radius: 5px;
+  background-color: #111111;
+  padding: 15px;
   font-size: 16px;
   line-height: 20px;
   /* box-shadow: 0px 1px 2px #232323, 0px -1px 2px #232323; */
 }
 
+@media (max-width: 1250px) {
+  p {
+      font-size: 14px;
+  }
+}
+
 h5 {
-font-weight: normal;
+  font-weight: normal;
 }
 
 .graphic__vis {
@@ -331,7 +395,11 @@ font-weight: normal;
   bottom: 0;
 }
 
-#vik1, #vik2, #vik3, #vik4, #vik5 {
+#vik1,
+#vik2,
+#vik3,
+#vik4,
+#vik5 {
   float: left;
   margin: auto;
 }
@@ -346,8 +414,20 @@ font-weight: normal;
   box-shadow: 0 0 8px 1px #868686;
 }
 
+@media (max-width: 1300px) {
+  #publications {
+      height: 250px;
+  }
+}
+
+@media (max-width: 1160px) {
+  #publications {
+      height: 200px;
+  }
+}
+
 #publications:hover {
-  transform: scale(1.1);
+  transform: scale(1.06);
 }
 
 .tick line {
@@ -418,8 +498,8 @@ font-weight: normal;
   width: 105px;
   z-index: 9;
   position: absolute;
-  top: 10px;
-  left: 5px;
+  top: 8px;
+  left: 140px;
   display: inline-block;
 }
 
