--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,7 @@ body::-webkit-scrollbar {
   width: 20px;
   position: fixed;
   top: 80px;
-  z-index: 9999;
-  /* background-color: gray; */
+  z-index: 999;
 }
 
 #story {
@@ -92,6 +91,7 @@ body::-webkit-scrollbar {
   top: 5px;
   left: 0px;
   height: 40px;
+  z-index: 999;
 }
 
 #uoe_img {
@@ -122,6 +122,30 @@ body::-webkit-scrollbar {
   left: 18px;
   cursor: pointer;
 }
+
+#icon_tooltip {
+  background-color: white;
+  color: black;
+  left: 50px;
+  position: absolute;
+  visibility: hidden;
+  font-size: 14px;
+  text-align: center;
+  padding: 5px;
+  white-space: nowrap;
+  z-index: 999;
+  font-weight: 600;
+  border-radius: 1px;
+}
+
+/* #time_title,
+#area_title {
+  width: 200px;
+  opacity: 1;
+  position: absolute;
+  z-index: 999;
+  left: 18px;
+} */
 
 
 #bee_icon:hover {
@@ -496,7 +520,7 @@ h5 {
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
   width: 105px;
-  z-index: 9;
+  z-index: 999;
   position: absolute;
   top: 8px;
   left: 140px;
