--- a/css/style.css
+++ b/css/style.css
@@ -291,6 +291,7 @@ h1 {
 
 .trigger {
   padding: 10px;
+  margin-left: 50px;
   text-align: left;
   font-size: 14px;
   /* border-bottom: 1px solid white; */
